--- a/public/food.html
+++ b/public/food.html
@@ -102,7 +102,7 @@
                     </ul>
                 </div>
             </div>
-            <!-- 景色 -->
+            <!-- 美食 -->
             <div class="foods border border-red mt-2">
                 <div class=" row no-gutters justify-content-around align-content-center">
                     <!-- 标题栏 -->
@@ -110,53 +110,23 @@
                     <!-- 一行四个 -->
                     <div class="col-3">
                         <div class="card p-2 border-0 bg-transparent">
-                            <img class="w-100" src="../img/foods/timg.jpg" alt="">
-                            <p class="text-center text-primary font-small m-0 mt-1 py-0">解放碑·酸辣粉</p>
-                            <p class="text-center font-red font-small m-0 mt-1 py-0">酸辣可口,美味无限</p>
+                            <img class="w-100" src="../img/strategy/meishi/huoguo1.jpg" alt="">
+                            <p class="text-center text-primary font-small m-0 mt-1 py-0">火锅太美味了</p>
+                            <p class="text-center font-red font-small m-0 mt-1 py-0">美味无限</p>
                         </div>
                     </div>
                     <div class="col-3">
                         <div class="card p-2 border-0 bg-transparent">
-                            <img class="w-100" src="../img/foods/timg.jpg" alt="">
-                            <p class="text-center text-primary font-small m-0 mt-1 py-0">解放碑·酸辣粉</p>
-                            <p class="text-center font-red font-small m-0 mt-1 py-0">酸辣可口,美味无限</p>
+                            <img class="w-100" src="../img/strategy/meishi/laziji.jpg" alt="">
+                            <p class="text-center text-primary font-small m-0 mt-1 py-0">laziji</p>
+                            <p class="text-center font-red font-small m-0 mt-1 py-0">美味无限</p>
                         </div>
                     </div>
                     <div class="col-3">
                         <div class="card p-2 border-0 bg-transparent">
-                            <img class="w-100" src="../img/foods/timg.jpg" alt="">
-                            <p class="text-center text-primary font-small m-0 mt-1 py-0">解放碑·酸辣粉</p>
-                            <p class="text-center font-red font-small m-0 mt-1 py-0">酸辣可口,美味无限</p>
-                        </div>
-                    </div>
-                    <div class="col-3">
-                        <div class="card p-2 border-0 bg-transparent">
-                            <img class="w-100" src="../img/foods/timg.jpg" alt="">
-                            <p class="text-center text-primary font-small m-0 mt-1 py-0">解放碑·酸辣粉</p>
-                            <p class="text-center font-red font-small m-0 mt-1 py-0">酸辣可口,美味无限</p>
-                        </div>
-                    </div>
-
-                    <!-- 一行四个 -->
-                    <div class="col-3">
-                        <div class="card p-2 border-0 bg-transparent">
-                            <img class="w-100" src="../img/foods/timg.jpg" alt="">
-                            <p class="text-center text-primary font-small m-0 mt-1 py-0">解放碑·酸辣粉</p>
-                            <p class="text-center font-red font-small m-0 mt-1 py-0">酸辣可口,美味无限</p>
-                        </div>
-                    </div>
-                    <div class="col-3">
-                        <div class="card p-2 border-0 bg-transparent">
-                            <img class="w-100" src="../img/foods/timg.jpg" alt="">
-                            <p class="text-center text-primary font-small m-0 mt-1 py-0">解放碑·酸辣粉</p>
-                            <p class="text-center font-red font-small m-0 mt-1 py-0">酸辣可口,美味无限</p>
-                        </div>
-                    </div>
-                    <div class="col-3">
-                        <div class="card p-2 border-0 bg-transparent">
-                            <img class="w-100" src="../img/foods/timg.jpg" alt="">
-                            <p class="text-center text-primary font-small m-0 mt-1 py-0">解放碑·酸辣粉</p>
-                            <p class="text-center font-red font-small m-0 mt-1 py-0">酸辣可口,美味无限</p>
+                            <img class="w-100" src="../img/strategy/meishi/xiaomian.jpg" alt="">
+                            <p class="text-center text-primary font-small m-0 mt-1 py-0">重庆小面</p>
+                            <p class="text-center font-red font-small m-0 mt-1 py-0">色香味俱全,美味无限</p>
                         </div>
                     </div>
                     <div class="col-3">
@@ -170,30 +140,60 @@
                     <!-- 一行四个 -->
                     <div class="col-3">
                         <div class="card p-2 border-0 bg-transparent">
-                            <img class="w-100" src="../img/foods/timg.jpg" alt="">
-                            <p class="text-center text-primary font-small m-0 mt-1 py-0">解放碑·酸辣粉</p>
-                            <p class="text-center font-red font-small m-0 mt-1 py-0">酸辣可口,美味无限</p>
+                            <img class="w-100" src="../img/strategy/meishi/ms/1-ms.jpg" alt="">
+                            <p class="text-center text-primary font-small m-0 mt-1 py-0">美味可口</p>
+                            <p class="text-center font-red font-small m-0 mt-1 py-0">美味无限</p>
                         </div>
                     </div>
                     <div class="col-3">
                         <div class="card p-2 border-0 bg-transparent">
-                            <img class="w-100" src="../img/foods/timg.jpg" alt="">
-                            <p class="text-center text-primary font-small m-0 mt-1 py-0">解放碑·酸辣粉</p>
-                            <p class="text-center font-red font-small m-0 mt-1 py-0">酸辣可口,美味无限</p>
+                            <img class="w-100" src="../img/strategy/meishi/ms/10-ms.jpg" alt="">
+                            <p class="text-center text-primary font-small m-0 mt-1 py-0">垂涎三尺</p>
+                            <p class="text-center font-red font-small m-0 mt-1 py-0">美味无限</p>
                         </div>
                     </div>
                     <div class="col-3">
                         <div class="card p-2 border-0 bg-transparent">
-                            <img class="w-100" src="../img/foods/timg.jpg" alt="">
-                            <p class="text-center text-primary font-small m-0 mt-1 py-0">解放碑·酸辣粉</p>
-                            <p class="text-center font-red font-small m-0 mt-1 py-0">酸辣可口,美味无限</p>
+                            <img class="w-100" src="../img/strategy/meishi/ms/11-ms.jpg" alt="">
+                            <p class="text-center text-primary font-small m-0 mt-1 py-0">超好吃,超美味</p>
+                            <p class="text-center font-red font-small m-0 mt-1 py-0">好吃不贵</p>
                         </div>
                     </div>
                     <div class="col-3">
                         <div class="card p-2 border-0 bg-transparent">
-                            <img class="w-100" src="../img/foods/timg.jpg" alt="">
-                            <p class="text-center text-primary font-small m-0 mt-1 py-0">解放碑·酸辣粉</p>
-                            <p class="text-center font-red font-small m-0 mt-1 py-0">酸辣可口,美味无限</p>
+                            <img class="w-100" src="../img/strategy/meishi/ms/12-ms.jpg" alt="">
+                            <p class="text-center text-primary font-small m-0 mt-1 py-0">美味</p>
+                            <p class="text-center font-red font-small m-0 mt-1 py-0">美味无限</p>
+                        </div>
+                    </div>
+
+                    <!-- 一行四个 -->
+                    <div class="col-3">
+                        <div class="card p-2 border-0 bg-transparent">
+                            <img class="w-100" src="../img/strategy/meishi/ms/13-ms.jpg" alt="">
+                            <p class="text-center text-primary font-small m-0 mt-1 py-0">美食</p>
+                            <p class="text-center font-red font-small m-0 mt-1 py-0">超美味</p>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="card p-2 border-0 bg-transparent">
+                            <img class="w-100" src="../img/strategy/meishi/ms/17-ms.jpg" alt="">
+                            <p class="text-center text-primary font-small m-0 mt-1 py-0">美食美味</p>
+                            <p class="text-center font-red font-small m-0 mt-1 py-0">吃了还想吃</p>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="card p-2 border-0 bg-transparent">
+                            <img class="w-100" src="../img/strategy/meishi/ms/15-ms.jpg" alt="">
+                            <p class="text-center text-primary font-small m-0 mt-1 py-0">口水直流</p>
+                            <p class="text-center font-red font-small m-0 mt-1 py-0">美味无限</p>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="card p-2 border-0 bg-transparent">
+                            <img class="w-100" src="../img/strategy/meishi/ms/16-ms.jpg" alt="">
+                            <p class="text-center text-primary font-small m-0 mt-1 py-0">流连忘返</p>
+                            <p class="text-center font-red font-small m-0 mt-1 py-0">美味无限</p>
                         </div>
                     </div>
 
