--- a/public/strategy.html
+++ b/public/strategy.html
@@ -332,14 +332,14 @@
                     </p>
                 </li>
                 <li class="m-2 border-bottom border-red">
-                    <p class="m-0 p-0 py-1 font-red font-small">火锅太美味了</p>
+                    <p class="m-0 p-0 py-1 font-red font-small">在这个8D城市里第一次欣赏到这么美的夜景</p>
                     <p class="m-0 p-0 py-1 font-red font-small d-flex">
                     <span class="col-5 p-0 d-inline-block text-primary">匿名用户</span>
                     <span class="col-7 p-0 d-inline-block text-primary text-right">2019-12-7 16:38:00</span>
                     </p>
                 </li>
                 <li class="m-2 border-bottom border-red">
-                    <p class="m-0 p-0 py-1 font-red font-small">毛血旺巴适得板!</p>
+                    <p class="m-0 p-0 py-1 font-red font-small">喜欢给我按摩的哪个妹子</p>
                     <p class="m-0 p-0 py-1 font-red font-small d-flex">
                     <span class="col-5 p-0 d-inline-block text-primary">匿名用户</span>
                     <span class="col-7 p-0 d-inline-block text-primary text-right">2019-12-7 16:38:00</span>
