--- a/public/gonglue.html
+++ b/public/gonglue.html
@@ -250,6 +250,15 @@
                 <p class="col-6 bg-red text-light p-1 pr-2 m-0 text-right">
                     <a class="text-light" href="">更多</a>
                 </p>
+                <ul class="list-unstyled w-100">
+                    <li class="m-2 border-bottom border-red">
+                        <p class="m-0 p-0 py-1 font-red font-small">技师不错,挺能聊</p>
+                        <p class="m-0 p-0 py-1 font-red font-small d-flex">
+                        <span class="col-5 p-0 d-inline-block text-primary">匿名用户</span>
+                        <span class="col-7 p-0 d-inline-block text-primary text-right">2019-12-7 16:38:00</span>
+                        </p>
+                    </li>
+                    </ul>
             </div>      
         </div>
     </div>
