--- a/public/xxyl.html
+++ b/public/xxyl.html
@@ -152,7 +152,7 @@
                     <!-- 一行四个 -->
                     <div class="col-3">
                         <div class="card p-2 border-0 bg-transparent">
-                            <a href="">
+                            <a href="gonglue.html" target="_blank">
                                     <img class="w-100" src="../img/strategy/xxyl/xxyl/5-yl.jpg" alt="">
                             </a>
                             
@@ -348,28 +348,28 @@
                 </p>
                 <ul class="list-unstyled w-100">
                 <li class="m-2 border-bottom border-red">
-                    <p class="m-0 p-0 py-1 font-red font-small">酸辣粉真好吃很快就回来好了收到反腐</p>
+                    <p class="m-0 p-0 py-1 font-red font-small">原来麻将也可以在水上玩,第一次玩,不错</p>
                     <p class="m-0 p-0 py-1 font-red font-small d-flex">
                     <span class="col-5 p-0 d-inline-block text-primary">匿名用户</span>
                     <span class="col-7 p-0 d-inline-block text-primary text-right">2019-12-7 16:38:00</span>
                     </p>
                 </li>
                 <li class="m-2 border-bottom border-red">
-                    <p class="m-0 p-0 py-1 font-red font-small">火锅太美味了</p>
+                    <p class="m-0 p-0 py-1 font-red font-small">技师好看,手法不错,挺能聊,我喜欢</p>
                     <p class="m-0 p-0 py-1 font-red font-small d-flex">
                     <span class="col-5 p-0 d-inline-block text-primary">匿名用户</span>
                     <span class="col-7 p-0 d-inline-block text-primary text-right">2019-12-7 16:38:00</span>
                     </p>
                 </li>
                 <li class="m-2 border-bottom border-red">
-                    <p class="m-0 p-0 py-1 font-red font-small">毛血旺巴适得板!</p>
+                    <p class="m-0 p-0 py-1 font-red font-small">冬天泡个温泉简直是幸福</p>
                     <p class="m-0 p-0 py-1 font-red font-small d-flex">
                     <span class="col-5 p-0 d-inline-block text-primary">匿名用户</span>
                     <span class="col-7 p-0 d-inline-block text-primary text-right">2019-12-7 16:38:00</span>
                     </p>
                 </li>
                 <li class="m-2 border-bottom border-red">
-                    <p class="m-0 p-0 py-1 font-red font-small">九村烤脑花好吃的吞舌头</p>
+                    <p class="m-0 p-0 py-1 font-red font-small">吃火锅,看变脸,生活有滋有味</p>
                     <p class="m-0 p-0 py-1 font-red font-small d-flex">
                     <span class="col-5 p-0 d-inline-block text-primary">匿名用户</span>
                     <span class="col-7 p-0 d-inline-block text-primary text-right">2019-12-7 16:38:00</span>
