--- a/public/message.html
+++ b/public/message.html
@@ -26,61 +26,61 @@
             <ul class="list-group p-0">
                 <li class="border-bottom border-secondary list-unstyled mt-3 text-middle">
                         <a href="message1.html" class="text-muted ml-3" target="_blank">
-                        <span class="forge">如果只能选择一个地方旅游,那么一定要选择重庆!</span>
+                            <span class="top-hover">如果只能选择一个地方旅游,那么一定要选择重庆!</span>
                         </a>
                         <p class="text-muted mb-2 text-right mr-2">2019-12-1</p>
                 </li>
                 <li class="border-bottom border-secondary list-unstyled mt-3 text-middle">
                     <a href="" class="text-muted ml-3">
-                        <span class="forge">那些你不知道的重庆传说</span>
+                        <span class="top-hover">那些你不知道的重庆传说</span>
                     </a>
                     <p class="text-muted mb-2  text-right mr-2">2019-11-15</p>
                 </li>
                 <li class="border-bottom border-secondary list-unstyled mt-3 text-middle">
                     <a href="" class="text-muted ml-3">
-                        <span class="forge">第一次去重庆旅游的朋友，这些事你一定要知道，不然会后悔！</span>
+                        <span class="top-hover">第一次去重庆旅游的朋友，这些事你一定要知道，不然会后悔！</span>
                     </a>
                     <p class="text-muted mb-2  text-right mr-2">2019-11-15</p>
                 </li>
                 <li class="border-bottom border-secondary list-unstyled mt-3 text-middle">
                     <a href="" class="text-muted ml-3">
-                        <span class="forge">重庆一处景区被誉为“鬼城”,白天热闹非凡,晚上却空无一人</span>
+                        <span class="top-hover">重庆一处景区被誉为“鬼城”,白天热闹非凡,晚上却空无一人</span>
                     </a>
                     <p class="text-muted mb-2  text-right mr-2">2019-10-29</p>
                 </li>
                 <li class="border-bottom border-secondary list-unstyled mt-3 text-middle">
                     <a href="" class="text-muted ml-3">
-                        <span class="forge">美呆了!重庆这两个景区迎来初雪 堆雪人、打雪仗</span>
+                        <span class="top-hover">美呆了!重庆这两个景区迎来初雪 堆雪人、打雪仗</span>
                     </a>
                     <p class="text-muted mb-2  text-right mr-2">2019-10-25</p>
                 </li>
                 <li class="border-bottom border-secondary list-unstyled mt-3 text-middle">
                     <a href="" class="text-muted ml-3">
-                        <span class="forge">重庆的招牌景点,每天晚上游客把道路堵死,只为看一眼最美的夜景 </span>
+                        <span class="top-hover">重庆的招牌景点,每天晚上游客把道路堵死,只为看一眼最美的夜景 </span>
                     </a>
                     <p class="text-muted mb-2  text-right mr-2">2019-10-15</p>
                 </li>
                 <li class="border-bottom border-secondary list-unstyled mt-3 text-middle">
                     <a href="" class="text-muted ml-3">
-                        <span class="forge">重庆最凄凉古镇,变成5A景区服务区,游客:来这里只是为了上厕所 </span>
+                        <span class="top-hover">重庆洪崖洞，现居重庆旅游榜第一，重庆夜景最美的地方，你来过吗 </span>
                     </a>
                     <p class="text-muted mb-2  text-right mr-2">2019-10-10</p>
                 </li>
                 <li class="border-bottom border-secondary list-unstyled mt-3 text-middle">
                     <a href="" class="text-muted ml-3">
-                        <span class="forge">浅析重庆特色地名地理文化特征</span>
+                        <span class="top-hover">浅析重庆特色地名地理文化特征</span>
                     </a>
                     <p class="text-muted mb-2  text-right mr-2">2019-10-1</p>
                 </li>
                 <li class="border-bottom border-secondary list-unstyled mt-3 text-middle">
                     <a href="" class="text-muted ml-3">
-                        <span class="forge">重庆话重庆魂,重庆城头趣事多,盘点重庆话中容易让人误解的词语 </span>
+                        <span class="top-hover">重庆话重庆魂,重庆城头趣事多,盘点重庆话中容易让人误解的词语 </span>
                     </a>
                     <p class="text-muted mb-2  text-right mr-2">2019-9-20</p>
                 </li>
                 <li class="list-unstyled mt-3 text-middle">
                     <a href="" class="text-muted ml-3">
-                        <span class="forge"> 重庆主城最适合发呆的四个地方 </span>
+                        <span class="top-hover"> 重庆主城最适合发呆的四个地方 </span>
                     </a>
                     <p class="text-muted mb-2  text-right mr-2">2019-9-15</p>
                 </li>
@@ -115,14 +115,33 @@
         </div>
     <!-- 右面-->
         <div class="col-3">
-            <!-- 热点图片-->
-            <div class="border border-red rounded mt-3 ml-2 ">
-                <p class="bg-red text-light mb-1">热门图片</p>
-                <img src="../img/message/rm.jpg" alt=""class="w-100 ph p-1">
-                <strong>朝天门最美夜景</strong>
-                <img src="../img/message/rm1.jpg" alt=""class="w-100 ph p-1">
+            <!-- 右上 热点图片-->
+            <div class="border border-red rounded mt-3 ml-2 hot">
+                <ul class="list-unstyled clearfix mb-1">
+                    <li>
+                        <p class="bg-red text-light mb-1">热门图片</p>
+                    </li>
+                    <li>
+                        <div class="photo">
+                            <img src="../img/message/rm.jpg" alt=""class="w-100 ph p-1">
+                        </div>
+                        <div class="rsp"></div>
+                        <div class="text">
+                            <h5><a href="">朝天门最美夜景</a></h5>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="photo">
+                            <img src="../img/message/rm1.jpg" alt=""class="w-100 ph p-1">
+                        </div>
+                        <div class="rsp"></div>
+                        <div class="text">
+                            <h5><a href="">洪崖洞的美丽</a></h5>
+                        </div>
+                    </li>
+                </ul>
             </div>
-            <!-- 评论 -->
+            <!-- 右下 评论 -->
             <div id="parent" class="border rounded border-red ml-2 row no-gutters mt-4">
                 <p class="col-6 bg-red text-light p-1 pl-2 m-0 text-left">评论</p>
                 <p class="col-6 bg-red text-light p-1 pr-2 m-0 text-right">
@@ -162,6 +181,23 @@
         </div>
         </div>
 </div>
+<script>
+    $(function(){
+        $(".hot ul li .rsp").hide();
+        //伪类的触发
+        $(".hot ul li").hover(function(){
+                    //标题的淡出和背景颜色的改变
+                    $(this).find(".rsp").stop().fadeTo(500,0.5);
+                    $(this).find(".text").stop().animate({left:'0'}, {duration: 500});
+                },
+                function(){
+                    $(this).find(".rsp").stop().fadeTo(500,0);
+                    $(this).find(".text").stop().animate({left:'300'}, {duration: "fast"});
+                    $(this).find(".text").animate({left:'-500'}, {duration: 0});
+                });
+    });
+
+</script>
 <footer>
     <iframe class="my_footer" src="footer.html" frameborder="0" scrolling="no"></iframe>
 </footer>
