--- a/public/survey.html
+++ b/public/survey.html
@@ -17,17 +17,19 @@
 </header>
 <div class="container">
     <div class=" border border-red mb-3">
+        <!--导航栏-->
         <ul class="breadcrumb border-bottom border-red">
             <li class="breadcrumb-item">
-                <a href="" class="text-muted mock">首页</a>
+                <a href="" class="text-muted top-hover">首页</a>
             </li>
             <li class="breadcrumb-item">
-                <a href="" class="text-muted mock">巴渝文化</a>
+                <a href="" class="text-muted top-hover">巴渝文化</a>
             </li>
             <li class="breadcrumb-item">
-                <a href="" class="text-dark mock">正文</a>
+                <a href="" class="text-dark top-hover">正文</a>
             </li>
         </ul>
+        <!-- 正文-->
         <div class="retract font-large">
             <h2 class="font-weight-bold mb-4 font-red text-center">重庆概况</h2>
             <img src="../img/survey/ttitle.jpg" alt="" class="w-90 h-80 mb-4 among">
