--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,7 @@
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/comm.css">
     <link rel="stylesheet" href="../css/footer.css">
-    <style>
-    
-    </style>
+		<link rel="stylesheet" href="../css/animate.css">
 </head>
 <header >
     <iframe class="my_header" src="header.html" frameborder="0" scrolling="no"></iframe>
@@ -36,6 +34,7 @@
             </div>
             <div class="carousel-item">
                 <img class="w-100" src="../img/index/banner02.jpg" alt="">
+								djfhdsui
             </div>
             <div class="carousel-item">
                 <img class="w-100" src="../img/index/banner03.jpg" alt="">
@@ -114,19 +113,24 @@
         </div>   
     </div>
     <!--4排-->
-    <div class="col-12">
+    <div class="">
         <ul class="list-unstyled d-flex justify-around">
             <li>
-                <img src="../img/strategy/meishi/ms/1-ms.jpg" class="w-2"/> 
-                  <span class="text-s">老油火锅</span>                    
+                <div>
+                     <img src="../img/strategy/meishi/ms/1-ms.jpg" class="w-2"/> 
+             </div><span class="text-s">老油火锅</span>                    
             </li>
-            <li class="ml-2">
+            <li class="">
+                <div>
                 <img src="../img/strategy/meishi/ms/29-ms.jpg" class="w-2"/>  
-                <span class=" text-s">乐山辣子鸡</span>               
+                <span class=" text-s">乐山辣子鸡</span>
+                </div>              
             </li>
-            <li class="ml-2">
-                <img src="../img/strategy/meishi/ms/26-ms.jpg" class="w-2"/>   
-                <span class=" text-s">香辣干锅</span>               
+            <li class="">
+                  <div>
+                     <img src="../img/strategy/meishi/ms/26-ms.jpg" class="w-2"/>   
+                     <span class=" text-s">香辣干锅</span> 
+                   </div>              
             </li>
         </ul>
     </div>
@@ -138,26 +142,31 @@
         </div> 
     </div> 
     <div  class="col-3 d-1 ">
-        <img src="../img/index/1571701797581.JPG" class="w-6">
+        <div  class=" w-6 "></div>
+				<div class="wz-2"><h4 class="text-center">一棵树观景台</h4></div>
    </div>
     <!--6排2--> 
    <div  class="col-6 ">
        <div class="mx-4">
-          <img src="../img/survey/dl.jpg" class="w-7" >
-          <img src="../img/index/02.jpg" class="w-8" > &nbsp; 
-          <img src="../img/index/01.jpg" class="w-8" >
+           <div class="w-7"></div>
+           <div class="w-71"><h5 class="text-center">城口雪景色</h5>
+            </div>
+           <div class="w-8"></div>
+           <div class="w-81"></div>
+          <div class="w-82 text-center"> 沙坪坝老火车</div>
+          <div class="w-83 text-center"> 沙坪坝老火车</div>
         </div>
         </div>
     <!--6排3-->
-    <div  class="col-3  ">
-        <div>
-                <img src="../img/index/banner06.jpg" class="w-6" >
-            </div>
+    <div  class="col-3">
+        <div  class="Wz-1"></div>   
+        <div class="wz-2 "><h4 class="text-center">洪崖洞</h4></div>
+     </div>
             
-        </div>
+    </div>
 </div> 
    
-    <footer class="mt-4">
+    <footer>
        <iframe class="my_header" src="footer.html" frameborder="0" scrolling="no"></iframe>
     </footer>
 
